--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -79,11 +79,15 @@ jobs:
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: terraform init
+      run: |
+       cd "east/how to create ec2 instance/"
+       terraform init
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: terraform fmt -check
+      run: |
+       cd "east/how to create ec2 instance/" 
+       terraform fmt -check
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
@@ -96,4 +100,6 @@ jobs:
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      run: terraform apply -auto-approve
+      run: |
+       cd "east/how to create ec2 instance/"
+       terraform apply -auto-approve
