--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -96,4 +96,4 @@ jobs:
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       run: |
        cd "east/how to create ec2 instance/"
-       terraform apply -auto-approve
+       terraform destroy -auto-approve
