--- a/.github/workflows/terrascan.yml
+++ b/.github/workflows/terrascan.yml
@@ -14,6 +14,7 @@ jobs:
            git clone https://github.com/accurics/terrascan.git
            ls 
            pwd 
+           cp "east/how to create ec2 instance/*.tf" terrascan
            cd terrascan
            make build 
            ./bin/terrascan
