--- a/.github/workflows/terrascan.yml
+++ b/.github/workflows/terrascan.yml
@@ -3,6 +3,10 @@ name: 'Terrascan'
 on:
   push:
    branches: master
+
+steps:
+    - name: Checkout
+      uses: actions/checkout@v2
    
 jobs:
   terrascan:
