--- a/.github/workflows/terrascan.yml
+++ b/.github/workflows/terrascan.yml
@@ -11,14 +11,16 @@ jobs:
      steps: 
        - name: Checkout
          uses: actions/checkout@v2
-       - name: 'Run Terrascan'
+       - name: 'Install Terrascan'
          run: |
            set -x 
            git clone https://github.com/accurics/terrascan.git
-           ls east/'how to create ec2 instance'
-           pwd 
-           cp "east/'how to create ec2 instance'/main.tf" terrascan
            cd terrascan
            make build 
            ./bin/terrascan
+       - name: 'Run Terrascan' 
+         run: |
+           cp -r "east/how to create instance/*.tf" terrascan
+           cd terrascan
            ./bin/terrascan scan -t aws
+              
