--- a/.github/workflows/terrascan.yml
+++ b/.github/workflows/terrascan.yml
@@ -21,6 +21,8 @@ jobs:
        - name: 'Run Terrascan' 
          run: |
            set -x
+           ls
+           ls east
            ls "east/how to create ec2 instance/*.tf"
            cp -r "east/how to create ec2 instance/*.tf" terrascan
            cd terrascan
