--- a/.github/workflows/terrascan.yml
+++ b/.github/workflows/terrascan.yml
@@ -24,8 +24,9 @@ jobs:
            ls
            pwd
            find . -name "*.tf"
+           cp ./east/"how to create ec2 instance"/main.tf terrascan
          #  ls "east/how to create ec2 instance/*.tf"
           # cp -r "east/how to create ec2 instance/*.tf" terrascan
-          # cd terrascan
-           #./bin/terrascan scan -t aws
+           cd terrascan
+           ./bin/terrascan scan -t aws
               
