--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -89,19 +89,8 @@ jobs:
       run: |
        cd "east/how to create ec2 instance/"
        terraform plan
-    - name: Terraform apply 
-      run: |
-       cd "east/how to create ec2 instance/"
-       terraform apply
-  
-         
-      # On push to master, build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Destroy
+    - name: Terraform Apply
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      run: |
-       cd "east/how to create ec2 instance/"
-       terraform destroy -auto-approve
-         
+      run: terraform apply -auto-approve
          
 
