--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -92,6 +92,8 @@ jobs:
        
     - name: Terraform Apply
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      run: terraform apply -auto-approve
+      run: |
+        cd "east/how to create ec2 instance/" 
+      terraform apply -auto-approve
          
 
