--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -90,11 +90,11 @@ jobs:
        cd "east/how to create ec2 instance/"
        terraform plan
        
-    - name: Terraform Apply
+    - name: Terraform Destroy
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       run: |
         cd "east/how to create ec2 instance/" 
-        terraform apply -auto-approve
+        terraform destroy -auto-approve
         
       
          
