--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -76,7 +76,7 @@ jobs:
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
-      
+     version: "~> 2.12"
 
     
 
