--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -95,6 +95,13 @@ jobs:
       run: |
        cd "east/how to create ec2 instance/"
        terraform plan
+      
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+      run: |
+        cd "east/how to create ec2 instance/" 
+        terraform apply -auto-approve
+         
        
     - name: Terraform Destroy
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
